<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">Golf **Coolest Programmer**</string>
	<string name="golf">Radio Golfer</string>
	<string name="RadioButton1">Cool</string>
	<string name="RadioButton2">Cooler</string>
	<string name="RadioButton3">Coolest</string>
	<string name="menuText">Android is the best mobile platform ever. If you want to know about android ask Golf</string>
</resources>
